[package]
name = "websocket-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version="1.0", features=["full"] }
tokio-tungstenite = { version="0.20", features=["connect", "native-tls"] }
futures-util = "0.3"
rmp-serde = "1.1"
serde = { version="1.0", features=["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features=["json"]}
http = "0.2"
